@@ -1,5 +1,6 @@
 0.12
  - Add Work object.
+ - Add title to Object example in doc.
 
 0.11 2025-03-27T16:49:28+01:00
  - Add 'external_ids' parameter to Publisher object.
